--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,7 @@
 	},
 
 	"browser_action": {
+		"default_popup": "popup/choose_page.html",
 		"default_icon": {
 			"16": "icons/ico16.png",
 			"32": "icons/ico32.png"
