--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"description": "Add bookmark to toolbar",
+	"description": "Add your bookmark to the toolbar",
 	"manifest_version": 2,
 	"name": "BookTool",
 	"version": "1.0",
@@ -20,10 +20,15 @@
 	},
 
 	"browser_action": {
-		"default_popup": "popup/choose_page.html",
 		"default_icon": {
 			"16": "icons/ico16.png",
 			"32": "icons/ico32.png"
+		}
+	},
+
+	"browser_specific_settings": {
+		"gecko": {
+			"id": "86darv@gmail.com"
 		}
 	}
 }
