--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"description": "Add a bookmark to the toolbar",
 	"manifest_version": 2,
 	"name": "Bookmark2Toolbar",
-	"version": "1.0",
+	"version": "1.1.0",
 
 	"background": {
 		"scripts": ["background.js"]
@@ -15,11 +15,18 @@
 		}
 	},
 
+	"content_scripts": [
+		{
+			"matches": ["<all_urls>"],
+			"js": ["content.js"]
+		}
+	],
+
 	"browser_specific_settings": {
 		"gecko": {
 			"id": "86darv@gmail.com"
 		}
 	},
 
-	"permissions": ["menus"]
+	"permissions": ["menus", "activeTab"]
 }
