--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 	"description": "Add a bookmark to the toolbar",
 	"manifest_version": 2,
-	"name": "Bookmark2Toolbar",
-	"version": "1.1.1",
+	"name": "Bookmark2Toolbar - 1/10",
+	"version": "1.2.1",
 
 	"background": {
 		"scripts": ["background.js"]
@@ -17,7 +17,7 @@
 
 	"browser_specific_settings": {
 		"gecko": {
-			"id": "86darv@gmail.com"
+			"id": "86darv@gmail.com.1-10"
 		}
 	},
 
