--- a/bookmark2tollbar1-10/manifest.json
+++ b/bookmark2tollbar1-10/manifest.json
@@ -2,7 +2,7 @@
 	"description": "Add a bookmark to the toolbar",
 	"manifest_version": 2,
 	"name": "Bookmark2Toolbar - 1/10",
-	"version": "1.2.1",
+	"version": "1.3.0",
 
 	"background": {
 		"scripts": ["background.js"]
@@ -17,7 +17,7 @@
 
 	"browser_specific_settings": {
 		"gecko": {
-			"id": "86darv@gmail.com.1-10"
+			"id": "86darv@gmail.com"
 		}
 	},
 
